crates/java-syntax/src/snapshots/java_syntax__lexer__tests__string_template_features-4.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"\\\"Outer \\\\{ \\\"Inner \\\\{x}\\\" }\\\"\")"
---
[
    (
        STRING_TEMPLATE_BEGIN,
        "\"Outer \\{",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_TEMPLATE_BEGIN,
        "\"Inner \\{",
    ),
    (
        IDENTIFIER,
        "x",
    ),
    (
        STRING_TEMPLATE_END,
        "}\"",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_TEMPLATE_END,
        "}\"",
    ),
]
