crates/java-syntax/src/snapshots/java_syntax__lexer__tests__string_template_features.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"STR.\\\"Hello \\\\{name}!\\\"\")"
---
[
    (
        IDENTIFIER,
        "STR",
    ),
    (
        DOT,
        ".",
    ),
    (
        STRING_TEMPLATE_BEGIN,
        "\"Hello \\{",
    ),
    (
        IDENTIFIER,
        "name",
    ),
    (
        STRING_TEMPLATE_END,
        "}!\"",
    ),
]
