crates/java-syntax/src/snapshots/java_syntax__lexer__tests__text_block_template.snap
---
source: crates/java-syntax/src/lexer.rs
expression: lex_tokens(source)
---
[
    (
        TEXT_BLOCK_TEMPLATE_BEGIN,
        "\"\"\"\n  Line 1 \\{",
    ),
    (
        IDENTIFIER,
        "a",
    ),
    (
        TEXT_BLOCK_TEMPLATE_END,
        "}\n  Line 2\"\"\"",
    ),
    (
        WHITESPACE,
        "\n",
    ),
]
