crates/java-syntax/src/snapshots/java_syntax__lexer__tests__text_blocks.snap
---
source: crates/java-syntax/src/lexer.rs
expression: lex_tokens(source)
---
[
    (
        TEXT_BLOCK,
        "\"\"\"\nHello\n  World\n\"\"\"",
    ),
    (
        WHITESPACE,
        "\n",
    ),
]
