crates/java-syntax/src/snapshots/java_syntax__lexer__tests__unicode_escape_in_strings-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"String s = \\\"\\\\u005C\\\\u0022\\\";\")"
---
[
    (
        IDENTIFIER,
        "String",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "s",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        STRING_LIT,
        "\"\\\"\"",
    ),
    (
        SEMICOLON,
        ";",
    ),
]
