crates/java-syntax/src/snapshots/java_syntax__lexer__tests__unicode_escapes-2.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"int my\\\\u005Fvar = 1;\")"
---
[
    (
        INT_KW,
        "int",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "my_var",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "1",
    ),
    (
        SEMICOLON,
        ";",
    ),
]
