crates/java-syntax/src/snapshots/java_syntax__lexer__tests__unicode_escapes-3.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"char \\\\uuuu0061 = 'a';\")"
---
[
    (
        CHAR_KW,
        "char",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "a",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CHAR_LIT,
        "'a'",
    ),
    (
        SEMICOLON,
        ";",
    ),
]
