crates/java-syntax/src/snapshots/java_syntax__lexer__tests__unicode_escapes-4.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"int a = 1 \\\\u002B\\\\u002B;\")"
---
[
    (
        INT_KW,
        "int",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "a",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUAL,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        NUMBER_LIT,
        "1",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        PLUS_PLUS,
        "++",
    ),
    (
        SEMICOLON,
        ";",
    ),
]
