crates/java-syntax/src/snapshots/java_syntax__lexer__tests__unicode_escapes.snap
---
source: crates/java-syntax/src/lexer.rs
expression: "lex_tokens(\"\\\\u0070ublic class Test {}\")"
---
[
    (
        PUBLIC_KW,
        "public",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        CLASS_KW,
        "class",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        IDENTIFIER,
        "Test",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        L_BRACE,
        "{",
    ),
    (
        R_BRACE,
        "}",
    ),
]
